update Game object

--- a/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
+++ b/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
@@ -165,12 +165,18 @@
     <ClCompile Include="..\lib\discord_game_sdk\cpp\types.cpp" />
     <ClCompile Include="..\lib\discord_game_sdk\cpp\user_manager.cpp" />
     <ClCompile Include="..\lib\discord_game_sdk\cpp\voice_manager.cpp" />
+    <ClCompile Include="Discord.cpp" />
+    <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="JukkyJung.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="Discord.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="JukkyJung.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
