update Button class

--- a/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
+++ b/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="..\lib\discord_game_sdk\cpp\types.cpp" />
     <ClCompile Include="..\lib\discord_game_sdk\cpp\user_manager.cpp" />
     <ClCompile Include="..\lib\discord_game_sdk\cpp\voice_manager.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="Discord.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -172,6 +173,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Discord.h" />
     <ClInclude Include="FileManager.h" />
