--- a/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
+++ b/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
@@ -166,6 +166,8 @@
     <ClCompile Include="..\lib\discord_game_sdk\cpp\user_manager.cpp" />
     <ClCompile Include="..\lib\discord_game_sdk\cpp\voice_manager.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Combat.cpp" />
     <ClCompile Include="Discord.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FileManager.cpp" />
@@ -175,6 +177,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="Combat.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Discord.h" />
     <ClInclude Include="Enemy.h" />
