--- a/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
+++ b/JukkyJung-Adventure/JukkyJung-Adventure.vcxproj
@@ -178,6 +178,9 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="JukkyJung.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MapManager.cpp" />
+    <ClCompile Include="SpriteAnimation.cpp" />
+    <ClCompile Include="UIElementManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
@@ -189,6 +192,158 @@
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="JukkyJung.h" />
+    <ClInclude Include="MapManager.h" />
+    <ClInclude Include="SpriteAnimation.h" />
+    <ClInclude Include="UIElementManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="asset\JukkyJung-Sprite.png" />
+    <Image Include="asset\UI\PNG\blue_boxCheckmark.png" />
+    <Image Include="asset\UI\PNG\blue_boxCross.png" />
+    <Image Include="asset\UI\PNG\blue_boxTick.png" />
+    <Image Include="asset\UI\PNG\blue_button00.png" />
+    <Image Include="asset\UI\PNG\blue_button01.png" />
+    <Image Include="asset\UI\PNG\blue_button02.png" />
+    <Image Include="asset\UI\PNG\blue_button03.png" />
+    <Image Include="asset\UI\PNG\blue_button04.png" />
+    <Image Include="asset\UI\PNG\blue_button05.png" />
+    <Image Include="asset\UI\PNG\blue_button06.png" />
+    <Image Include="asset\UI\PNG\blue_button07.png" />
+    <Image Include="asset\UI\PNG\blue_button08.png" />
+    <Image Include="asset\UI\PNG\blue_button09.png" />
+    <Image Include="asset\UI\PNG\blue_button10.png" />
+    <Image Include="asset\UI\PNG\blue_button11.png" />
+    <Image Include="asset\UI\PNG\blue_button12.png" />
+    <Image Include="asset\UI\PNG\blue_button13.png" />
+    <Image Include="asset\UI\PNG\blue_checkmark.png" />
+    <Image Include="asset\UI\PNG\blue_circle.png" />
+    <Image Include="asset\UI\PNG\blue_cross.png" />
+    <Image Include="asset\UI\PNG\blue_panel.png" />
+    <Image Include="asset\UI\PNG\blue_sliderDown.png" />
+    <Image Include="asset\UI\PNG\blue_sliderLeft.png" />
+    <Image Include="asset\UI\PNG\blue_sliderRight.png" />
+    <Image Include="asset\UI\PNG\blue_sliderUp.png" />
+    <Image Include="asset\UI\PNG\blue_tick.png" />
+    <Image Include="asset\UI\PNG\dropdownBottom.png" />
+    <Image Include="asset\UI\PNG\dropdownMid.png" />
+    <Image Include="asset\UI\PNG\dropdownTop.png" />
+    <Image Include="asset\UI\PNG\green_boxCheckmark.png" />
+    <Image Include="asset\UI\PNG\green_boxCross.png" />
+    <Image Include="asset\UI\PNG\green_boxTick.png" />
+    <Image Include="asset\UI\PNG\green_button00.png" />
+    <Image Include="asset\UI\PNG\green_button01.png" />
+    <Image Include="asset\UI\PNG\green_button02.png" />
+    <Image Include="asset\UI\PNG\green_button03.png" />
+    <Image Include="asset\UI\PNG\green_button04.png" />
+    <Image Include="asset\UI\PNG\green_button05.png" />
+    <Image Include="asset\UI\PNG\green_button06.png" />
+    <Image Include="asset\UI\PNG\green_button07.png" />
+    <Image Include="asset\UI\PNG\green_button08.png" />
+    <Image Include="asset\UI\PNG\green_button09.png" />
+    <Image Include="asset\UI\PNG\green_button10.png" />
+    <Image Include="asset\UI\PNG\green_button11.png" />
+    <Image Include="asset\UI\PNG\green_button12.png" />
+    <Image Include="asset\UI\PNG\green_button13.png" />
+    <Image Include="asset\UI\PNG\green_checkmark.png" />
+    <Image Include="asset\UI\PNG\green_circle.png" />
+    <Image Include="asset\UI\PNG\green_cross.png" />
+    <Image Include="asset\UI\PNG\green_panel.png" />
+    <Image Include="asset\UI\PNG\green_sliderDown.png" />
+    <Image Include="asset\UI\PNG\green_sliderLeft.png" />
+    <Image Include="asset\UI\PNG\green_sliderRight.png" />
+    <Image Include="asset\UI\PNG\green_sliderUp.png" />
+    <Image Include="asset\UI\PNG\green_tick.png" />
+    <Image Include="asset\UI\PNG\grey_arrowDownGrey.png" />
+    <Image Include="asset\UI\PNG\grey_arrowDownWhite.png" />
+    <Image Include="asset\UI\PNG\grey_arrowUpGrey.png" />
+    <Image Include="asset\UI\PNG\grey_arrowUpWhite.png" />
+    <Image Include="asset\UI\PNG\grey_box.png" />
+    <Image Include="asset\UI\PNG\grey_boxCheckmark.png" />
+    <Image Include="asset\UI\PNG\grey_boxCross.png" />
+    <Image Include="asset\UI\PNG\grey_boxTick.png" />
+    <Image Include="asset\UI\PNG\grey_button00.png" />
+    <Image Include="asset\UI\PNG\grey_button01.png" />
+    <Image Include="asset\UI\PNG\grey_button02.png" />
+    <Image Include="asset\UI\PNG\grey_button03.png" />
+    <Image Include="asset\UI\PNG\grey_button04.png" />
+    <Image Include="asset\UI\PNG\grey_button05.png" />
+    <Image Include="asset\UI\PNG\grey_button06.png" />
+    <Image Include="asset\UI\PNG\grey_button07.png" />
+    <Image Include="asset\UI\PNG\grey_button08.png" />
+    <Image Include="asset\UI\PNG\grey_button09.png" />
+    <Image Include="asset\UI\PNG\grey_button10.png" />
+    <Image Include="asset\UI\PNG\grey_button11.png" />
+    <Image Include="asset\UI\PNG\grey_button12.png" />
+    <Image Include="asset\UI\PNG\grey_button13.png" />
+    <Image Include="asset\UI\PNG\grey_button14.png" />
+    <Image Include="asset\UI\PNG\grey_button15.png" />
+    <Image Include="asset\UI\PNG\grey_checkmarkGrey.png" />
+    <Image Include="asset\UI\PNG\grey_checkmarkWhite.png" />
+    <Image Include="asset\UI\PNG\grey_circle.png" />
+    <Image Include="asset\UI\PNG\grey_crossGrey.png" />
+    <Image Include="asset\UI\PNG\grey_crossWhite.png" />
+    <Image Include="asset\UI\PNG\grey_panel.png" />
+    <Image Include="asset\UI\PNG\grey_sliderDown.png" />
+    <Image Include="asset\UI\PNG\grey_sliderEnd.png" />
+    <Image Include="asset\UI\PNG\grey_sliderHorizontal.png" />
+    <Image Include="asset\UI\PNG\grey_sliderLeft.png" />
+    <Image Include="asset\UI\PNG\grey_sliderRight.png" />
+    <Image Include="asset\UI\PNG\grey_sliderUp.png" />
+    <Image Include="asset\UI\PNG\grey_sliderVertical.png" />
+    <Image Include="asset\UI\PNG\grey_tickGrey.png" />
+    <Image Include="asset\UI\PNG\grey_tickWhite.png" />
+    <Image Include="asset\UI\PNG\red_boxCheckmark.png" />
+    <Image Include="asset\UI\PNG\red_boxCross.png" />
+    <Image Include="asset\UI\PNG\red_boxTick.png" />
+    <Image Include="asset\UI\PNG\red_button00.png" />
+    <Image Include="asset\UI\PNG\red_button01.png" />
+    <Image Include="asset\UI\PNG\red_button02.png" />
+    <Image Include="asset\UI\PNG\red_button03.png" />
+    <Image Include="asset\UI\PNG\red_button04.png" />
+    <Image Include="asset\UI\PNG\red_button05.png" />
+    <Image Include="asset\UI\PNG\red_button06.png" />
+    <Image Include="asset\UI\PNG\red_button07.png" />
+    <Image Include="asset\UI\PNG\red_button08.png" />
+    <Image Include="asset\UI\PNG\red_button09.png" />
+    <Image Include="asset\UI\PNG\red_button10.png" />
+    <Image Include="asset\UI\PNG\red_button11.png" />
+    <Image Include="asset\UI\PNG\red_button12.png" />
+    <Image Include="asset\UI\PNG\red_button13.png" />
+    <Image Include="asset\UI\PNG\red_checkmark.png" />
+    <Image Include="asset\UI\PNG\red_circle.png" />
+    <Image Include="asset\UI\PNG\red_cross.png" />
+    <Image Include="asset\UI\PNG\red_panel.png" />
+    <Image Include="asset\UI\PNG\red_sliderDown.png" />
+    <Image Include="asset\UI\PNG\red_sliderLeft.png" />
+    <Image Include="asset\UI\PNG\red_sliderRight.png" />
+    <Image Include="asset\UI\PNG\red_sliderUp.png" />
+    <Image Include="asset\UI\PNG\red_tick.png" />
+    <Image Include="asset\UI\PNG\yellow_boxCheckmark.png" />
+    <Image Include="asset\UI\PNG\yellow_boxCross.png" />
+    <Image Include="asset\UI\PNG\yellow_boxTick.png" />
+    <Image Include="asset\UI\PNG\yellow_button00.png" />
+    <Image Include="asset\UI\PNG\yellow_button01.png" />
+    <Image Include="asset\UI\PNG\yellow_button02.png" />
+    <Image Include="asset\UI\PNG\yellow_button03.png" />
+    <Image Include="asset\UI\PNG\yellow_button04.png" />
+    <Image Include="asset\UI\PNG\yellow_button05.png" />
+    <Image Include="asset\UI\PNG\yellow_button06.png" />
+    <Image Include="asset\UI\PNG\yellow_button07.png" />
+    <Image Include="asset\UI\PNG\yellow_button08.png" />
+    <Image Include="asset\UI\PNG\yellow_button09.png" />
+    <Image Include="asset\UI\PNG\yellow_button10.png" />
+    <Image Include="asset\UI\PNG\yellow_button11.png" />
+    <Image Include="asset\UI\PNG\yellow_button12.png" />
+    <Image Include="asset\UI\PNG\yellow_button13.png" />
+    <Image Include="asset\UI\PNG\yellow_checkmark.png" />
+    <Image Include="asset\UI\PNG\yellow_circle.png" />
+    <Image Include="asset\UI\PNG\yellow_cross.png" />
+    <Image Include="asset\UI\PNG\yellow_panel.png" />
+    <Image Include="asset\UI\PNG\yellow_sliderDown.png" />
+    <Image Include="asset\UI\PNG\yellow_sliderLeft.png" />
+    <Image Include="asset\UI\PNG\yellow_sliderRight.png" />
+    <Image Include="asset\UI\PNG\yellow_sliderUp.png" />
+    <Image Include="asset\UI\PNG\yellow_tick.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
